[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Tools.gd" type="Script" id=1]

[node name="Tools" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PuzzleGenerator" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="StartButton" type="Button" parent="PuzzleGenerator"]
margin_right = 112.0
margin_bottom = 20.0
text = "Start generating"

[node name="StopButton" type="Button" parent="PuzzleGenerator"]
margin_top = 24.0
margin_right = 112.0
margin_bottom = 44.0
disabled = true
text = "Stop"

[node name="Progress" type="Label" parent="PuzzleGenerator"]
margin_top = 48.0
margin_right = 112.0
margin_bottom = 62.0

[connection signal="pressed" from="PuzzleGenerator/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="PuzzleGenerator/StopButton" to="." method="_on_StopButton_pressed"]
